assert-struct/tests/snapshots/nested__deeply_nested_equality_pattern.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_errors/deeply_nested_equality_pattern.rs:39:26
   |
39 |                 version: == 6,  // Line 38 - should report this line
   |                          ^^^^ expected 6, got 5
